// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryCharts Unit Testing HistoryCharts Container HistoryCharts snapshot testing 1`] = `
<Fragment>
  <div
    className="content-card"
  >
    <div
      id="chart-container"
    >
      <SizeChart
        chartData={
          Array [
            Object {
              "build": 1,
              "size": 1172.113,
              "time": 1.439,
            },
          ]
        }
      />
      <TimeChart
        chartData={
          Array [
            Object {
              "build": 1,
              "size": 1172.113,
              "time": 1.439,
            },
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`HistoryCharts Unit Testing SizeChart SizeChart snapshot testing 1`] = `
<SizeChart
  chartData={
    Array [
      Object {
        "build": 1,
        "size": 100,
        "time": 3,
      },
      Object {
        "build": 2,
        "size": 100,
        "time": 3,
      },
      Object {
        "build": 3,
        "size": 100,
        "time": 3,
      },
    ]
  }
>
  <div
    className="single-chart"
  >
    <div
      id="size-chart"
    />
  </div>
</SizeChart>
`;

exports[`HistoryCharts Unit Testing TimeChart TimeChart snapshot testing 1`] = `
<TimeChart
  chartData={
    Array [
      Object {
        "build": 1,
        "size": 100,
        "time": 3,
      },
      Object {
        "build": 2,
        "size": 100,
        "time": 3,
      },
      Object {
        "build": 3,
        "size": 100,
        "time": 3,
      },
    ]
  }
>
  <div
    className="single-chart"
  >
    <div
      id="time-chart"
    />
  </div>
</TimeChart>
`;
